--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "puppeteer": "^24.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2"
