--- a/src/data/project.json
+++ b/src/data/project.json
@@ -16,8 +16,8 @@
   {
     "name": "Sunmayo Admin Panel",
     "link": "https://admin-page-blond.vercel.app",
-    "framework": "NextJS",
-    "createdAt": "10/10/2025",
+    "framework": "React Js / Node JS",
+    "createdAt": "10/09/2025",
     "image": "/project-images/image.png"
   },
   {
